[gd_scene load_steps=4 format=3 uid="uid://dunukyv2ghgby"]

[ext_resource type="Script" path="res://meowww.gd" id="1_12xc8"]
[ext_resource type="Texture2D" uid="uid://c43ffc4bkkii4" path="res://assets/fillings/pork/IMG_9722.png" id="2_0p7xw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lu34"]
size = Vector2(218, 264)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_12xc8")

[node name="Untitled151920250310142112" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_0p7xw")

[node name="TextureButton" type="TextureButton" parent="Untitled151920250310142112"]
offset_left = -54.0
offset_top = -58.0
offset_right = 54.0
offset_bottom = 56.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_6lu34")

[connection signal="button_down" from="Untitled151920250310142112/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="Untitled151920250310142112/TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
